--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,15 @@
 body {
    font-size: 62.5%;
-   font-family: 'Vollkorn';
+   font-family: 'Courier Prime';
 }
 
 .Container {
-    max-width: 1000px;
+    max-width: 960px;
     margin: 5rem auto;
+}
+
+body {
+    background: rgb(251, 250, 239);
 }
 
 .Header {
@@ -14,4 +18,9 @@ body {
 
 p, ul, ol {
     font-size: 1.2rem;
+}
+
+
+.blog-post-content, .blog-post {
+  margin-top: 3rem;
 }
